<resources>
    <string name="app_name">LAB 7</string>
    <string name="heading">Date Night</string>
    <string name="date_button">Find</string>
    <string name="toggle_on">day</string>
    <string name="toggle_off">night</string>
    <string-array name="relationship">
        <item>New Boy</item>
        <item>Boy Friend</item>
        <item>Husband</item>
    </string-array>
    <string name="radio1">$</string>
    <string name="radio2">$$</string>
    <string name="radio3">$$$</string>
    <string name="winter">Private</string>
    <string name="spring">Public</string>
</resources>
